RESOLVED FIXED290918
[GTK] Fix clang-18 build in wkdev-sdk
https://bugs.webkit.org/show_bug.cgi?id=290918
Summary [GTK] Fix clang-18 build in wkdev-sdk
Nikolas Zimmermann
Reported 2025-04-02 06:51:56 PDT
WebPrintOperationGtk.cpp fails to add WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE_BEGIN/_END guards around Skia includes, breaking the build, fix that.
Attachments
Nikolas Zimmermann
Comment 1 2025-04-02 06:53:46 PDT
EWS
Comment 2 2025-04-02 06:56:08 PDT
Committed 293098@main (208bda27f855): <https://commits.webkit.org/293098@main> Reviewed commits have been landed. Closing PR #43464 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.