[GTK] Fix clang-18 build in wkdev-sdk https://bugs.webkit.org/show_bug.cgi?id=290918

Unreviewed build fix.

Guard Skia includes in WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE_BEGIN/_END
section -- otherwise we run into an 'cast-align' error, breaking the build.

* Source/WebKit/WebProcess/WebPage/gtk/WebPrintOperationGtk.cpp:

Canonical link: https://commits.webkit.org/293098@main